k8s/ms-productos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-productos-deployment
  labels:
    app: ms-productos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-productos
  template:
    metadata:
      labels:
        app: ms-productos
    spec:
      containers:
        - name: ms-productos
          image: markherreras/restaurante-productos:1.0
          ports:
            - containerPort: 7654
