k8s/ms-productos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-productos-service
spec:
  selector:
    app: ms-productos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7654
  type: ClusterIP
